--- a/old_single.html
+++ b/old_single.html
@@ -127,3 +127,64 @@ if( $fields )
     )
   ) */?>
 </ul>-->
+<?php
+
+			$fields = get_fields();
+			if( $fields )
+			{
+				//echo '<h3>Informations</h3>';
+				echo '<div id="infos_bloc">';
+				foreach( $fields as $field_name => $value )
+				{
+					if($value && $field_name)
+					{
+						// get_field_object( $field_name, $post_id, $options )
+						// - $value has already been loaded for us, no point to load it again in the get_field_object function
+						$field = get_field_object($field_name, false, array('load_value' => false));
+						
+						if($field_name=='photo'){
+							echo '<div class="id_photo"><img src="'.$value.'" alt="Photo"/></div>';
+						}else if($field_name=='video'
+								||$field_name=='liaison'
+								||$field_name=='nom_de_la_serie'
+								||$field_name=='les_episodes'
+								||$field_name=='saison_1'
+								||$field_name=='saison_2'
+								||$field_name=='saison_3'
+								||$field_name=='saison_4'
+								||$field_name=='saison_5'
+								||$field_name=='saison_6'
+								){
+							echo '<h5>'.$field['label'].'</h5>';
+							echo '<ul>';
+						/*	for($i=0;$i<sizeof($value);$i++){
+								echo '<li><a href="'.$value[$i].'" target="_blank">'.$value[$i].'</a></li>';
+							}*/
+							foreach ( $value as $post ) :
+								setup_postdata( $post ); ?> 
+								<li class="fiche_id_video">
+									<a href="<?php the_permalink(); ?>" title="<?php the_title(); ?>">
+									<?php the_post_thumbnail('thumbnail'); ?>
+									<p><?php the_title(); ?></p></a>
+								</li>
+							<?php
+							endforeach; 
+							wp_reset_postdata();
+							echo '</ul>';
+						}else if($field_name=='source'){
+							echo '<div class="equipe_encas">';
+							echo '<h5>'.$field['label'].'</h5>';
+							echo '<p><a href="'.$value.'" target="_blank">Lien vers la source</a></p>';
+							echo '</div>';
+						}else{
+							echo '<div class="equipe_encas">';		
+							echo '<span class="icon-user"></span><h5>'.$field['label'].'</h5>';
+							echo '<p class="search_author">'.$value.'</p>';
+							echo '</div>';
+						}
+					}
+				}
+				echo '</div>';
+			}
+
+?>
